add description and create documentation with swagger
